[package]
name = "mpl_bubblegum"
version = "0.1.0"
authors = ["Elixir Developers"]
edition = "2021"

[lib]
name = "mpl_bubblegum"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
mpl-bubblegum = "1.4.0"
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.40"
bincode = "1.3.3"
