[package]
name = "mpl_bubblegum"
version = "0.1.0"
authors = ["Elixir Developers"]
edition = "2021"

[lib]
name = "mpl_bubblegum"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
mpl-bubblegum = "1.4.0"
solana-program = "1.16.0"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
spl-account-compression = "0.2"  # Adjust version; check spl-account-compression repo
spl-noop = "0.2"  # Adjust version; check spl-noop repo
borsh = "0.10.3"
thiserror = "1.0.40"
bincode = "1.3.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }